// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Ui/Icons All Icons 1`] = `
<div
  style="height: 100%; width: 100%; background: white;"
>
  <table>
    <tr>
      <th>
        Name
      </th>
      <th>
        Component
      </th>
    </tr>
    <tr>
      <td>
        check
      </td>
      <td>
        <svg
          aria-labelledby="check"
          class="component-icon"
          fill="#666"
          height="16px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-check"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        download
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="16px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
  </table>
</div>
`;

exports[`Automated Storybook Snapshots Ui/Icons Icon All Size 1`] = `
<div
  style="height: 100%; width: 100%; background: white;"
>
  <table>
    <tr>
      <th>
        Name
      </th>
      <th>
        Size
      </th>
    </tr>
    <tr>
      <td>
        xs
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="8px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="8px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        s
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="12px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="12px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        m
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="16px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        l
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        xl
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="48px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="48px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        xxl
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="128px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="128px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-check"
              viewBox="0 0 24 24"
            >
              <title>
                check
              </title>
              <path
                d="M18 6.999l-7 9.5-5-4"
              />
              <path
                d="M2.5 2.499h19v19h-19z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
  </table>
</div>
`;
